# Visualizer

./: .gitignore  CMakeLists.txt  GraphicsView.cpp  GraphicsView.h  Json.cpp  Json.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  SceneBuilder.cpp  SceneBuilder.h  drawing.json  main.cpp  sample.json  scene.json
Publisher/: CMakeLists.txt  Color.cpp  Color.h  Graphic.h  Object.cpp  Object.h  Point.cpp  Point.h  Properties  Publisher.kdev4  Types  Vector  Visualizer.cpp  Visualizer.h  main.cpp  main.old.cpp  out.json
